fix(button-icon): update white-space style to nowrap

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -9,6 +9,7 @@
   font-size: 20px;
   font-weight: bold;
   line-height: 28px;
+  white-space: nowrap;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
